--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_insert"
+    android:id="@+id/activity_edit"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="8dp"
@@ -9,6 +9,13 @@
     android:paddingRight="8dp"
     android:paddingTop="8dp">
     <TextView
+        android:id="@+id/tvId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Id: "
+        android:textSize="20sp"/>
+    <TextView
+        android:layout_below="@id/edtId"
         android:id="@+id/tvNama"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,21 +25,28 @@
         android:id="@+id/tvAlamat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Alamat: "
+        android:text="Alamat : "
         android:layout_below="@id/edtNama"
         android:textSize="20sp"/>
+    <EditText
+        android:id="@+id/edtId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Id"
+        android:layout_below="@id/tvId"/>
     <EditText
         android:id="@+id/edtNama"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Ex: RS Awal Bros"
+        android:hint="Nama"
         android:layout_below="@id/tvNama"/>
     <EditText
         android:id="@+id/edtAlamat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Ex: Batam"
-        android:layout_below="@id/tvAlamat"/>
+        android:hint="Alamat"
+        android:layout_below="@id/tvAlamat"
+        android:inputType="date"/>
     <LinearLayout
         android:id="@+id/Linearlayout2"
         android:layout_width="wrap_content"
@@ -42,16 +56,22 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp">
+
         <Button
-            android:id="@+id/btInserting"
+            android:id="@+id/btUpdate2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Insert"/>
+            android:text="Update"/>
+
+        <Button
+            android:id="@+id/btDelete2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Delete"/>
         <Button
             android:id="@+id/btBackGo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Back"/>
     </LinearLayout>
-
 </RelativeLayout>
